hphp/test/quick/global_statement.php.expectf

Fatal error: Global statements have been removed in %s/hphp/test/quick/global_statement.php on line 5
